src/objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Edit_Modal_Name__c</fullName>
        <description>If Form is an Editable form, this field will decide which modal to use for data population over that form</description>
        <label>Edit Modal Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW DEAL UNIT</fullName>
                </value>
                <value>
                    <fullName>USED DEAL UNIT</fullName>
                </value>
                <value>
	                <fullName>NEW DEAL UNIT YAMAHA</fullName>
	            </value>
	            <value>
	                <fullName>USED DEAL UNIT YAMAHA</fullName>
	            </value>
	            <value>
	                <fullName>NC TRAILERS FORMS</fullName>
	            </value>
                <value>
                    <fullName>STREAM RV</fullName>
                </value>
                <value>
                    <fullName>GOLF RIDER</fullName>
                </value>
                <value>
                    <fullName>AVARIE MOTORSPORTS</fullName>
                </value>
                <value>
                    <fullName>VICTORY CUSTOM TRAILERS</fullName>
                </value>
                <value>
                    <fullName>MADRAS MARINE</fullName>
                </value>
                <value>
                    <fullName>HOG HEAVEN</fullName>
                </value>
                <value>
                    <fullName>ULTIMATE TOYS</fullName>
                </value>
				<value>
                    <fullName>Generic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Edit_Config__c</fullName>
        <description>JSON config representing X, Y Coordinates for Form</description>
        <label>Form Edit Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grouping_Name__c</fullName>
        <label>Grouping Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Vendor product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PDF Form is Editable or not</description>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landscape_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landscape Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manual_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manual Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Defined_Fields_Config__c</fullName>
        <label>User Defined Fields Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Defined_Fields_Form_Edit_Config__c</fullName>
        <description>JSON config representing X, Y Coordinates for user defined fields on form</description>
        <label>User Defined Fields Form Edit Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>